# NEAT_CPP

./: .gitignore  CMakeLists.txt  main.cpp
src/: Gene.cpp  Gene.h  Genome.cpp  Genome.h  System.h  activation.cpp  activation.h  calculator.h  config.h  crossover.cpp  crossover.h  distance.cpp  distance.h  mutate.cpp  mutate.h  types.h
